--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Omar Pacheco</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Software Consultant working for Pariveda Solutions. My experience so far has been in backend projects. I want to get more frontend and web experience so joined the Boot Camp!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm originally from Santa Barbara, California but I live in Atlanta, GA.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like to play with my dog, play video games, and do some woodworking.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is a professor at a university! Preferably UGA because GO DAWGS!</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Sandy Springs and loving it!</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Because you can code and develope but you also get to design what you're working on.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/brOmarito">Github</a></li>
         </ul>
     </footer>
 </body>
